--- a/block-BNaaft/event_management/views/eventDetails.ejs
+++ b/block-BNaaft/event_management/views/eventDetails.ejs
@@ -35,7 +35,7 @@
         <p>Host: <%= event.host %></p>
         <p>Start: <%= event.start_date %></p>
         <p>End: <%= event.end_date %></p>
-        <p>Event Category: <%= event.category %></p>
+        <p>Event Category: <%= event.event_category[0] %></p>
         <p>Location: <%= event.location %></p>
         <div class="flex">
           <p>Likes: <%= event.likes %></p>
