--- a/block-BNaaft/event_management/views/updateEvent.ejs
+++ b/block-BNaaft/event_management/views/updateEvent.ejs
@@ -42,8 +42,8 @@
           value="<%= event.title %>"
         />
         <textarea name="summary" rows="4" placeholder="Summary">
-          <%= event.summary %></textarea
-        >
+          <%= event.summary %>
+        </textarea>
         <input
           type="text"
           name="host"
@@ -64,9 +64,9 @@
         />
         <input
           type="text"
-          name="category"
+          name="event_category"
           placeholder="Event Category"
-          value="<%= event.category %>"
+          value="<%= event.event_category %>"
         />
         <input
           type="text"
