--- a/block-BNaaft/event_management/views/events.ejs
+++ b/block-BNaaft/event_management/views/events.ejs
@@ -29,28 +29,62 @@
       </div>
     </header>
     <section class="container space">
-      <h2 class="txt-center">Events</h2>
-      <p>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde sunt id
-        earum! Consequatur sint quo illum assumenda, quia saepe sit corporis,
-        obcaecati exercitationem omnis quibusdam fugit non, minus deleniti animi.
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat harum
-        repellendus eaque architecto esse accusamus quam ipsam sint magnam ab,
-        dignissimos praesentium. Nobis incidunt accusantium reiciendis ratione quam
-        doloribus iure?
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus esse
-        deserunt quaerat? Veritatis rerum debitis, libero recusandae fuga ad porro
-        dolorum, maiores placeat provident doloremque quidem veniam repellat. Odio,
-        officiis. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi
-        itaque, ipsum esse tempora officia veritatis quidem deleniti delectus
-        maiores vitae sint consectetur voluptate tenetur commodi sequi quia
-        quibusdam blanditiis amet? Lorem ipsum dolor sit amet consectetur,
-        adipisicing elit. Repellendus, maxime? Inventore repudiandae minus beatae
-        aliquid maiores laborum dicta sequi, delectus dolores architecto fuga
-        debitis? At quisquam possimus repellendus? Facilis, corporis!
-      </p>
+      <div class="flex jc-between">
+        <div class="flex-60">
+          <h2 class="txt-center">Events</h2>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde sunt id
+            earum! Consequatur sint quo illum assumenda, quia saepe sit corporis,
+            obcaecati exercitationem omnis quibusdam fugit non, minus deleniti animi.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat harum
+            repellendus eaque architecto esse accusamus quam ipsam sint magnam ab,
+            dignissimos praesentium. Nobis incidunt accusantium reiciendis ratione quam
+            doloribus iure?
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus esse
+            deserunt quaerat? Veritatis rerum debitis, libero recusandae fuga ad porro
+            dolorum, maiores placeat provident doloremque quidem veniam repellat. Odio,
+            officiis. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi
+            itaque, ipsum esse tempora officia veritatis quidem deleniti delectus
+            maiores vitae sint consectetur voluptate tenetur commodi sequi quia
+            quibusdam blanditiis amet? Lorem ipsum dolor sit amet consectetur,
+            adipisicing elit. Repellendus, maxime? Inventore repudiandae minus beatae
+            aliquid maiores laborum dicta sequi, delectus dolores architecto fuga
+            debitis? At quisquam possimus repellendus? Facilis, corporis!
+          </p>
+        </div>
+        <aside class="sidebar flex-30">
+          <div class="category-widget">
+            <nav>
+              <ul>
+                <h4>All categories</h4>
+                
+              </ul>
+            </nav>
+          </div>
+          <div class="location-widget">
+            <nav>
+              <ul>
+                <h4>Events on locations</h4>
+                <% location.forEach(cv=>{ %>
+                  <li><a href=""><%= cv%></a></li>
+                  <% })%>
+              </ul>
+            </nav>
+          </div>
+          <div class="datewidget">
+            <h4>Events on date : </h4>
+            <form action="/events/datedata"  method="POST">
+              <label for="startdate">start date </label>
+              <input type="date" name="startdate" id="startdate">
+              <label for="enddate">end date </label>
+              <input type="date" name="enddate" id="enddate">
+              <input type="submit" value="submit">
+            </form>
+          </div>
+        </aside>
+      </div>
       <div class="flex jc-between ai-start">
         <div class="flex-60">
           <h3>List of Events</h3>
@@ -74,7 +108,7 @@
             <input type="text" name="host" placeholder="Enter Host" />
             <input type="date" name="start_date" placeholder="Start Date" />
             <input type="date" name="end_date" placeholder="End Date" />
-            <input type="text" name="category" placeholder="Event Category" />
+            <input type="text" name="event_category" placeholder="Event Category" />
             <input type="text" name="location" placeholder="Location" />
             <input type="number" name="likes" placeholder="Likes" />
             <button>Submit Details</button>
